version/0.4/_sources/api/ansys/scade/apitools/create/declaration/add_operator_hidden.rst.txt
.. py:function:: add_operator_hidden(operator, vars, insert_before)

   
   Add hidden inputs to an operator.


   :Parameters:

       **operator** : :obj:`suite.Operator`
           Input operator.

       **vars** : :obj:`List`\[:obj:`Tuple`\[:class:`python:str`, :obj:`TX`]]
           Name/type expression trees.

       **insert_before** : :obj:`suite.LocalVariable`
           Insertion point of the inputs. When this parameter is not ``None``, it is
           an existing hidden input of the operator. The hidden inputs are inserted
           before this input. Otherwise, the hidden inputs are added at the end.

   :Returns:

       :obj:`List`\[:obj:`suite.LocalVariable`]
           List of the added hidden inputs.








   .. rubric:: Notes

   This is an interface change with respect to the *SCADE Creation Library*.
   The pairs "name"/"type" tree are now embedded in a list of tuples.





   ..
       !! processed by numpydoc !!
